--- a/trunk/css/default.css
+++ b/trunk/css/default.css
@@ -1,5 +1,15 @@
 <style type="text/css">
 	/* the calendar table style */
+	option.lst{
+		background-color:; 
+		color:;
+	}
+	
+	input.btn{
+		background-color:;
+		color:;
+	}	
+	
 	.calendar {
 	  padding:0px;
 	  border-spacing:0px;
@@ -86,6 +96,11 @@
 	
 	/* the style to add to the calendarDay style if the displayed calendar day is today's date */
 	.calendarToday {
+	  width:14%;
+	  height:80px;
+	  vertical-align:top;
+	  border:1px solid #808080;
+	  font-size: 11px;
 	  background-color: #FFFFDD;
 	}
 	.alerts {
