--- a/trunk/css/default.css
+++ b/trunk/css/default.css
@@ -1,6 +1,5 @@
 <style type="text/css">
 	/* the calendar table style */
-	
 	option.lst{
 		background-color:; 
 		color:;
@@ -10,81 +9,10 @@
 		background-color:;
 		color:;
 	}	
+	
 	ul.bullets{
 		padding-left: 5px;
 		xlist-style-image: url('check.jpg');
-	}
-	
-	.calendar {
-	  padding:0px;
-	  border-spacing:0px;
-	  border:1px solid #808080;
-	  border-collapse:collapse;
-	  width:100%;
-	  background-color:;
-	}
-	
-	/* style for the table cell displaying the month title */
-	.calendarTitle {
-	  font-size:18px;
-	  text-align:center;
-	  font-weight:bold;
-	}
-	
-	/* style for the cell holding the year select box */
-	.calendarYearSelect {
-	  text-align:right;
-	  white-space:nowrap;
-	}
-	
-	/* style for the cell holding the month select box */
-	.calendarMonthSelect {
-	  white-space:nowrap;
-	}
-	
-	/* style for the week day headings */
-	.calendarWeekendHeading {
-	  text-align:center;
-	  font-weight:bold;
-	  border:1px solid #808080;
-	  background-color:#E0E0E0;	  
-	}
-	
-	.calendarWeekdayHeading {
-	  text-align:center;
-	  font-weight:bold;
-	  border:1px solid #808080;
-	  background-color:#E0E0E0;
-	}
-	
-	/* style for a cell representing an individual day on the calendar */
-	.calendarWeekend {
-	  width:14%;
-	  height:80px;
-	  vertical-align:top;
-	  border:1px solid #808080;
-	  font-size: 11px;
-	  background-color:#EEEEEE;
-	  padding:0px;
-	}
-	
-	.calendarWeekday {
-	  width:14%;
-	  height:80px;
-	  vertical-align:top;
-	  border:1px solid #808080;
-	  font-size: 11px;
-	  background-color:;
-	  padding:0px;
-	}
-
-	/* style of the cell displaying the number of the day in the month */
-	.calendarDayNumber {
-	  border:1px solid #CCCCCC;
-	  width:20%;
-	  text-align: center;
-	  font-size: 12px;
-	  background-color:#E0E0E0;
 	}
 	
 	/* style of the cell with the "Add Event" link */
@@ -96,16 +24,12 @@
 	  background-color: transparent;
 	  border-spacing: 0px;
 	  width:100%;
-	  padding:0px;
 	}
 	
 	/* Style of event list*/
 	.calendarEventList {
-	  background-color: transparent;
 	  width:100%;
-	  border:0px solid #CCCCCC;
-	  padding:0px;
-	 }
+	}
 	
 	/* defined in CalendarArticles.php*/
 	.repeatEvent{
@@ -123,6 +47,77 @@
 		border-spacing: 0px;
 	}
 	
+	.calendar {
+	  padding:0px;
+	  border-spacing:0px;
+	  border:1px solid #808080;
+	  border-collapse:collapse;
+	  width:100%;
+	  background-color:;
+	}
+	
+	/* style for the table cell displaying the month title */
+	.calendarTitle {
+	  font-size:18px;
+	  text-align:center;
+	  font-weight:bold;
+	  font-style:; 
+	}
+	
+	/* style for the cell holding the year select box */
+	.calendarYearSelect {
+	  text-align:right;
+	  white-space:nowrap;
+	}
+	
+	/* style for the cell holding the month select box */
+	.calendarMonthSelect {
+	  white-space:nowrap;
+	}
+	
+	/* style for the week day headings */
+	.calendarWeekendHeading {
+	  text-align:center;
+	  font-weight:bold;
+	  background-color:#E0E0E0;	
+	  border:1px solid #808080;
+  	}
+	
+	.calendarWeekdayHeading {
+	  text-align:center;
+	  font-weight:bold;
+	  background-color:#E0E0E0;	  
+	  border:1px solid #808080;
+	}
+	
+	/* style for a cell representing an individual day on the calendar */
+	.calendarWeekend {
+	  width:14%;
+	  height:80px;
+	  vertical-align:top;
+	  border:1px solid #808080;
+	  font-size: 11px;
+	  background-color:#EEEEEE;
+	}
+	
+	.calendarWeekday{
+	  width:14%;
+	  height:80px;
+	  vertical-align:top;
+	  border:1px solid #808080;
+	  font-size: 11px;
+	  background-color:;
+	}
+
+	/* style of the cell displaying the number of the day in the month */
+	.calendarDayNumber {
+	  border:1px solid #CCCCCC;
+	  background-color:#E0E0E0;	  
+	  width:20%;
+	  text-align: center;
+	  font-size: 12px;
+	}
+		
 	/* the style to add to the calendarDay style if the displayed calendar day is today's date */
 	.calendarToday {
 	  width:14%;
@@ -131,7 +126,6 @@
 	  border:1px solid #808080;
 	  font-size: 11px;
 	  background-color: #FFFFDD;
-	  padding:0px;
 	}
 	
 	.alerts {
