--- a/trunk/css/default.css
+++ b/trunk/css/default.css
@@ -29,6 +29,7 @@
 	/* Style of event list*/
 	.calendarEventList {
 	  width:100%;
+	  background-color: transparent;
 	}
 	
 	/* defined in CalendarArticles.php*/
