--- a/trunk/templates/css/default.css
+++ b/trunk/templates/css/default.css
@@ -1,24 +1,26 @@
 <style type="text/css">
 	/* the calendar table style */
-	option.lst{
-		background-color:; 
-		color:;
-	}
-	
-	input.btn{
-		background-color:;
-		color:;
-	}	
-	
+	option.lst{}
+	input.btn{}	
 	ul.bullets{
 		padding-left: 5px;
 		xlist-style-image: url('check.jpg');
 	}
+
+	.calendarWeekend {background-color:#EEEEEE;}	
+	.calendarEventAdd {}	
+	.calendarToday { background-color: #FFFFDD;} /* current day */
+	.alerts {text-align: left;}		
 	
-	/* style of the cell with the "Add Event" link */
-	.calendarEventAdd {
+	.daycommon{
+	  width:14%;
+	  height:90px;
+	  vertical-align:top;
+	  font-size: 11px;	
+	  border:1px solid #808080;	 
+	  background-color:;
 	}
-	
+
 	/* makes the content have a transparent background (for selected days) */
 	.calendarTransparent {
 	  background-color: transparent;
@@ -71,44 +73,17 @@
 	  white-space:nowrap;
 	}
 	
-	/* style for the cell holding the month select box */
-	.calendarMonthSelect {
+	.calendarMonthSelect { 
 	  white-space:nowrap;
 	}
 	
 	/* style for the week day headings */
-	.calendarWeekendHeading {
+	.calendarHeading {
 	  text-align:center;
 	  font-weight:bold;
 	  background-color:#E0E0E0;	
 	  border:1px solid #808080;
   	}
-	
-	.calendarWeekdayHeading {
-	  text-align:center;
-	  font-weight:bold;
-	  background-color:#E0E0E0;	  
-	  border:1px solid #808080;
-	}
-	
-	/* style for a cell representing an individual day on the calendar */
-	.calendarWeekend {
-	  width:14%;
-	  height:80px;
-	  vertical-align:top;
-	  border:1px solid #808080;
-	  font-size: 11px;
-	  background-color:#EEEEEE;
-	}
-	
-	.calendarWeekday{
-	  width:14%;
-	  height:80px;
-	  vertical-align:top;
-	  border:1px solid #808080;
-	  font-size: 11px;
-	  background-color:;
-	}
 
 	/* style of the cell displaying the number of the day in the month */
 	.calendarDayNumber {
@@ -118,18 +93,5 @@
 	  text-align: center;
 	  font-size: 12px;
 	}
-		
-	/* the style to add to the calendarDay style if the displayed calendar day is today's date */
-	.calendarToday {
-	  width:14%;
-	  height:80px;
-	  vertical-align:top;
-	  border:1px solid #808080;
-	  font-size: 11px;
-	  background-color: #FFFFDD;
-	}
-	
-	.alerts {
-	  text-align: left;
-	}	
+
 </style>
