--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -19,14 +19,14 @@
 		Email: kenyu73@gmail.com
 		
 -->
-<form enctype="multipart/form-data" method="post"> <!-- enctype enables uploads -->
+<form type="multipart/form-data" method="post"> <!-- enctype enables uploads -->
 <table class="calendar">
   <!-- Header Start -->
   <tr>
-    <td class="calendarMonthSelect" colspan="2"> [[PreviousMonthButton]]&nbsp;[[MonthSelect]]&nbsp;[[NextMonthButton]]&nbsp;</td>
-    <td class="calendarTitle" colspan="3"> [[CalendarName]]<br/>
+    <td class="calendarMonthSelect" colspan="3">[[PreviousMonthButton]]&nbsp;[[MonthSelect]]&nbsp;[[NextMonthButton]]&nbsp;</td>
+    <td class="calendarTitle" nowrap>[[CalendarName]]<br/>
       <font size="-1">[[CalendarMonth]], [[CalendarYear]]</font> </td>
-    <td class="calendarYearSelect" colspan="2">[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]]&nbsp;</td>
+    <td class="calendarYearSelect" colspan="3">[[YearView]][[MonthView]][[DayView]]&nbsp;&nbsp;&nbsp;&nbsp;[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]]&nbsp;</td>
   </tr>
   <!-- Header End -->
   <!-- Day Heading Start -->
@@ -38,15 +38,17 @@
     <td class="calendarHeading">Thursday</td>
     <td class="calendarHeading">Friday</td>
     <td class="calendarHeading">Saturday</td>
+	
+	<!--<td style="text-align:center; vertical-align:top;" rowspan=6>[[MiniCalendarLast]]<br/>[[MiniCalendarNext]]</td>-->
   </tr>
   <!-- Day Heading End -->
   <!-- Week Start -->
   <tr>
   	<!-- Sunday Start -->
-    <td class="daycommon calendarWeekend"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekend"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -56,10 +58,10 @@
 	</td>
 	<!-- Sunday End -->
 	<!-- Monday Start -->
-    <td class="daycommon calendarWeekday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -68,10 +70,10 @@
 	</td>
 	<!-- Monday End -->
 	<!-- Tuesday Start -->
-    <td class="daycommon calendarWeekday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -80,10 +82,10 @@
 	</td>
 	<!-- Tuesday End -->
 	<!-- Wednesday Start -->
-    <td class="daycommon calendarWeekday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -92,10 +94,10 @@
 	</td>
 	<!-- Wednesday End -->
 	<!-- Thursday Start -->
-    <td class="daycommon calendarWeekday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -104,10 +106,10 @@
 	</td>
 	<!-- Thursday End -->
 	<!-- Friday Start -->
-    <td class="daycommon calendarWeekday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -116,10 +118,10 @@
 	</td>
 	<!-- Friday End -->
 	<!-- Saturday Start -->
-    <td class="daycommon calendarWeekend"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekend"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -131,10 +133,10 @@
   <!-- Week End -->
   <tr>
 	<!-- Selected Sunday Start -->
-    <td class="daycommon calendarWeekend calendarToday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekend"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd calendarTransparent">[[AddEvent]]</td>
+          <td class="calendarAddEvent calendarTransparent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -143,10 +145,10 @@
 	</td>
 	<!-- Selected Sunday End -->
 	<!-- Selected Monday Start -->
-    <td class="daycommon calendarWeekday calendarToday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]] </td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -155,10 +157,10 @@
 	</td>
 	<!-- Selected Monday End -->
 	<!-- Selected Tuesday Start -->
-    <td class="daycommon calendarWeekday calendarToday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -167,10 +169,10 @@
 	</td>
 	<!-- Selected Tuesday End -->
 	<!-- Selected Wednesday Start -->
-    <td class="daycommon calendarWeekday calendarToday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -179,10 +181,10 @@
 	</td>
 	<!-- Selected Wednesday End -->
 	<!-- Selected Thursday Start -->
-    <td class="daycommon calendarWeekday calendarToday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -191,10 +193,10 @@
 	</td>
 	<!-- Selected Thursday End -->
 	<!-- Selected Friday Start -->
-    <td class="daycommon calendarWeekday calendarToday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -203,10 +205,10 @@
 	</td>
 	<!-- Selected Friday End -->
 	<!-- Selected Saturday Start -->
-    <td class="daycommon calendarWeekday calendarToday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarWeekend"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarEventAdd">[[AddEvent]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
@@ -217,36 +219,33 @@
   </tr>
   <tr>
 	<!-- Missing Sunday Start -->
-    <td class="daycommon calendarWeekend">&nbsp;</td>
+    <td class="daymissing calendarWeekend">&nbsp;</td>
     <!-- Missing Sunday End -->
 	<!-- Missing Monday Start -->
-    <td class="daycommon calendarWeekday">&nbsp;</td>
+    <td class="daymissing calendarWeekday">&nbsp;</td>
     <!-- Missing Monday End -->
 	<!-- Missing Tuesday Start -->
-    <td class="daycommon calendarWeekday">&nbsp;</td>
+    <td class="daymissing calendarWeekday">&nbsp;</td>
     <!-- Missing Tuesday End -->
 	<!-- Missing Wednesday Start -->
-    <td class="daycommon calendarWeekday">&nbsp;</td>
+    <td class="daymissing calendarWeekday">&nbsp;</td>
     <!-- Missing Wednesday End -->
 	<!-- Missing Thursday Start -->
-    <td class="daycommon calendarWeekday">&nbsp;</td>
+    <td class="daymissing calendarWeekday">&nbsp;</td>
     <!-- Missing Thursday End -->
 	<!-- Missing Friday Start -->
-    <td class="daycommon calendarWeekday">&nbsp;</td>
+    <td class="daymissing calendarWeekday">&nbsp;</td>
     <!-- Missing Friday End -->
 	<!-- Missing Saturday Start -->
-    <td class="daycommon calendarWeekend">&nbsp;</td>
+    <td class="daymissing calendarWeekend">&nbsp;</td>
     <!-- Missing Saturday End -->
   </tr>
   <!-- Footer Start -->
 </table>
-<table width=100% border=0>
-<tr>
-  <td style="font-size:85%;">[[Version]]&nbsp;[[About]]&nbsp;&nbsp;</td>
-  <td style="text-align:right; vertical-align:top;">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
-</tr>
-  <tr>
-  <td style="font-size:85%;">[[TimeTrackValues]]</td>
+<table width=100% border=0><tr>
+<td><input id='btnyear' type='button' value ='year' onclick='showYearCalendar()'></td>
+<td style="font-size:85%;">[[Version]]&nbsp;[[TimeTrackValues]]&nbsp;[[About]]</td>
+<td style="text-align:right; vertical-align:top;">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
 </tr>
 <tr><td>[[Load_iCal]]</td></tr>
 </table>
