--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -133,7 +133,7 @@
   <!-- Week End -->
   <tr>
 	<!-- Selected Sunday Start -->
-    <td class="[[daycommon]] calendarWeekend"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
           <td class="calendarAddEvent calendarTransparent">[[AddEvent]]</td>
@@ -145,7 +145,7 @@
 	</td>
 	<!-- Selected Sunday End -->
 	<!-- Selected Monday Start -->
-    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]] </td>
           <td class="calendarAddEvent">[[AddEvent]]</td>
@@ -157,7 +157,7 @@
 	</td>
 	<!-- Selected Monday End -->
 	<!-- Selected Tuesday Start -->
-    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
           <td class="calendarAddEvent">[[AddEvent]]</td>
@@ -169,7 +169,7 @@
 	</td>
 	<!-- Selected Tuesday End -->
 	<!-- Selected Wednesday Start -->
-    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
           <td class="calendarAddEvent">[[AddEvent]]</td>
@@ -181,7 +181,7 @@
 	</td>
 	<!-- Selected Wednesday End -->
 	<!-- Selected Thursday Start -->
-    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
           <td class="calendarAddEvent">[[AddEvent]]</td>
@@ -193,7 +193,7 @@
 	</td>
 	<!-- Selected Thursday End -->
 	<!-- Selected Friday Start -->
-    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
           <td class="calendarAddEvent">[[AddEvent]]</td>
@@ -205,7 +205,7 @@
 	</td>
 	<!-- Selected Friday End -->
 	<!-- Selected Saturday Start -->
-    <td class="[[daycommon]] calendarWeekend"><table class="calendarTransparent">
+    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
           <td class="calendarAddEvent">[[AddEvent]]</td>
@@ -243,7 +243,6 @@
   <!-- Footer Start -->
 </table>
 <table width=100% border=0><tr>
-<td><input id='btnyear' type='button' value ='year' onclick='showYearCalendar()'></td>
 <td style="font-size:85%;">[[Version]]&nbsp;[[TimeTrackValues]]&nbsp;[[About]]</td>
 <td style="text-align:right; vertical-align:top;">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
 </tr>
