--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -45,11 +45,11 @@
   <!-- Week Start -->
   <tr>
   	<!-- Sunday Start -->
-    <td class="[[daycommon]] calendarWeekend"><table class="calendarTransparent">
+    <td class="[[mode]] calendarWeekend"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -58,11 +58,11 @@
 	</td>
 	<!-- Sunday End -->
 	<!-- Monday Start -->
-    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarWeekday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -70,11 +70,11 @@
 	</td>
 	<!-- Monday End -->
 	<!-- Tuesday Start -->
-    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarWeekday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -82,11 +82,11 @@
 	</td>
 	<!-- Tuesday End -->
 	<!-- Wednesday Start -->
-    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarWeekday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -94,11 +94,11 @@
 	</td>
 	<!-- Wednesday End -->
 	<!-- Thursday Start -->
-    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarWeekday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -106,11 +106,11 @@
 	</td>
 	<!-- Thursday End -->
 	<!-- Friday Start -->
-    <td class="[[daycommon]] calendarWeekday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarWeekday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -118,11 +118,11 @@
 	</td>
 	<!-- Friday End -->
 	<!-- Saturday Start -->
-    <td class="[[daycommon]] calendarWeekend"><table class="calendarTransparent">
+    <td class="[[mode]] calendarWeekend"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -133,11 +133,11 @@
   <!-- Week End -->
   <tr>
 	<!-- Selected Sunday Start -->
-    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarToday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent calendarTransparent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -145,11 +145,11 @@
 	</td>
 	<!-- Selected Sunday End -->
 	<!-- Selected Monday Start -->
-    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarToday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]] </td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -157,11 +157,11 @@
 	</td>
 	<!-- Selected Monday End -->
 	<!-- Selected Tuesday Start -->
-    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarToday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -169,11 +169,11 @@
 	</td>
 	<!-- Selected Tuesday End -->
 	<!-- Selected Wednesday Start -->
-    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarToday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -181,11 +181,11 @@
 	</td>
 	<!-- Selected Wednesday End -->
 	<!-- Selected Thursday Start -->
-    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarToday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -193,11 +193,11 @@
 	</td>
 	<!-- Selected Thursday End -->
 	<!-- Selected Friday Start -->
-    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarToday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
@@ -205,11 +205,11 @@
 	</td>
 	<!-- Selected Friday End -->
 	<!-- Selected Saturday Start -->
-    <td class="[[daycommon]] calendarToday"><table class="calendarTransparent">
+    <td class="[[mode]] calendarToday"><table class="calendarTransparent">
         <tr>
-          <td class="calendarDayNumber">[[Day]]</td>
-          <td class="calendarAddEvent">[[AddEvent]]</td>
+          <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 		  <td class="alerts">[[Alert]]</td>
+          <td class="calendarAddEvent">[[AddEvent]]</td>
         </tr>
         <tr>
           <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
