--- a/trunk/templates/default.css
+++ b/trunk/templates/default.css
@@ -3,64 +3,28 @@
 	/* the calendar table style */
 	option.lst{}
 	input.btn{}	
-	ul.bullets{
-		padding-left: 5px;
-		xlist-style-image: url('check.jpg');
-	}
+	ul.bullets {padding-left: 5px;}
 
-	.calendarWeekend {background-color:#EEEEEE;}	
-	.calendarToday { background-color: #FFFFDD;} /* current day */
+	.calendarWeekday {vertical-align:top; background-color:;}	
+	.calendarWeekend {vertical-align:top; background-color:#EEEEEE;}	
+	.calendarToday {vertical-align:top; background-color: #FFFFDD;}
+	.daymissing { height:100px;border:1px solid #808080;}
 	.alerts {text-align: left;}		
-
-	.normalMode{
-	  height:100px;
-	  vertical-align:top;
-	  font-size: 11px;	
-	  border:1px solid #808080;	 
-	  background-color:;
-	}
+	.calendarYearSelect {text-align:right;white-space:nowrap;}
+	.calendarMonthSelect {white-space:nowrap;}
+	.eventsMode {}
+	.dayMode{}
+	.weekMode{border:1px solid #808080;height:100px;}	
+	.calendarAddEvent {text-align: right; white-space:nowrap;}		
+	.monthMode{height:100px; border:1px solid #808080;}
+	.calendarEventList { width:100%; background-color: transparent;}
 	
-	.eventsMode{
-	}
 	
-	.dayMode{
-	}
-	
-	.weekMode{
-		border:1px solid #808080;
-		height:200px;
-		vertical-align:top;
-	}
-
-	.daymissing{
-	  height:90px;
-	  vertical-align:top;
-	  font-size: 11px;	
-	  border:1px solid #808080;	 
-	  text-align: center;
-	}
-	
-	/* makes the content have a transparent background (for selected days) */
 	.calendarTransparent {
 	  background-color: transparent;
-	  border-spacing: 0px;
 	  width:100%;
 	}
-	
-	.calendarAddEvent {
-	  text-align: left;  
-	  white-space:nowrap;
-	  height:5;
-	  border:0px solid #CCCCCC;
-	}		
-	
-	/* Style of event list*/
-	.calendarEventList {
-	  width:100%;
-	  background-color: transparent;
-	  border:0px solid #CCCCCC;
-	}
-	
+
 	/* defined in CalendarArticles.php*/
 	.repeatEvent{
 		background-color: #E8E8E8;
@@ -70,7 +34,6 @@
 		border-spacing: 0px;
 		font-size:11px;
 	}
-	
 
 	/* defined in CalendarArticles.php*/
 	.singleEvent{
@@ -96,29 +59,56 @@
 	  font-size:18px;
 	  text-align:center;
 	  font-weight:bold;
-	  font-style:; 
-	}
-	
-	/* style for the cell holding the year select box */
-	.calendarYearSelect {
-	  text-align:right;
-	  white-space:nowrap;
-	}
-	
-	.calendarMonthSelect { 
-	  white-space:nowrap;
 	}
 	
 	/* style for the week day headings */
 	.calendarHeading {
-	 width:14%;
+	  width:14%;
 	  text-align:center;
 	  font-weight:bold;
 	  background-color:#E0E0E0;	
 	  border:1px solid #808080;
   	}
-
+	
+	.calendarDayNumber {
+	  white-space:nowrap;
+	  border:1px solid #CCCCCC;
+	  background-color:#E0E0E0;	  
+	  width:20%;
+	  text-align: center;
+	  font-size: 12px;
+	}
+	
+	/* eventlist mode day overrrides */
+	.eventsDay {
+	  background-color: transparent;
+	  border:0px;
+	  font-weight:bold;
+	  font-style:italic;
+	  font-size: 16px;
+	}
+	
+	.singleDay {
+	  background-color: transparent;
+	  border:0px;
+	  font-weight:bold;
+	  font-style:italic;
+	  font-size: 16px;
+	}	
+	
+/******  Year View Options BEGIN  *******/
 	.yearCalendar {
+	  vertical-align:top;
+	  padding:0px;
+	  border-spacing:0px;
+	  border:0px solid #808080;
+	  border-collapse:collapse;
+	  width:100%;
+	  background-color:;
+	  text-align: center;
+	}		
+	
+	.yearCalendarMonth {
 	  vertical-align:top;
 	  padding:0px;
 	  border-spacing:0px;
@@ -127,13 +117,12 @@
 	  width:100%;
 	  background-color:;
 	  text-align: center;
-	}		
+	}	
 	
 	.yearTitle {
 	  text-align:center;
 	  font-weight:bold;
-	  xbackground-color:#E0E0E0;	
-	  border:0px solid #808080;
+	  border:1px solid #808080;
 	  font-size: 11px;
   	}
 	
@@ -142,31 +131,22 @@
 	  font-weight:bold;
 	  background-color:#E0E0E0;	
 	  border:1px solid #808080;
-	  font-size: 11px;
+	  font-size: 14px;
   	}
 	
 	.yearWeekday {
 	  text-align:center;
 	  border:1px solid #808080;
-	  font-size: 9px;
+	  font-size: 12px;
   	}
 	
 	.yearWeekend {
 	  text-align:center;
 	  background-color:#EEEEEE;	
 	  border:1px solid #808080;
-	  font-size: 9px;
-  	}
-	
-	/* style of the cell displaying the number of the day in the month */
-	.calendarDayNumber {
-	  border:1px solid #CCCCCC;
-	  background-color:#E0E0E0;	  
-	  width:20%;
-	  text-align: center;
 	  font-size: 12px;
-	  height:5px
-	}
+  	}
+/******  Year View Options END  *******/		
 
 </style>
 <!-- CSS End -->
