--- a/trunk/templates/default.css
+++ b/trunk/templates/default.css
@@ -15,7 +15,7 @@
 	.eventsMode {}
 	.dayMode{}
 	.weekMode{border:1px solid #808080;height:100px;}	
-	.calendarAddEvent {text-align: right; white-space:nowrap;}		
+	.calendarAddEvent {text-align: right; white-space:nowrap; font-size:10px; vertical-align:top;}		
 	.monthMode{height:100px; border:1px solid #808080;}
 	.calendarEventList { width:100%; background-color: transparent;}
 	
