--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -243,7 +243,7 @@
   <!-- Footer Start -->
 </table>
 <table width=100% border=0><tr>
-<td style="font-size:85%;">[[Version]]&nbsp;[[TimeTrackValues]]&nbsp;[[About]]</td>
+<td style="font-size:85%;">[[Version]]&nbsp;[[About]]</td>
 <td style="text-align:right; vertical-align:top;">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
 </tr>
 <tr><td>[[Load_iCal]]</td></tr>
