--- a/trunk/templates/default.css
+++ b/trunk/templates/default.css
@@ -86,6 +86,7 @@
 	  font-weight:bold;
 	  font-style:italic;
 	  font-size: 16px;
+	  text-align: left;
 	}
 	
 	.singleDay {
@@ -93,7 +94,8 @@
 	  border:0px;
 	  font-weight:bold;
 	  font-style:italic;
-	  font-size: 16px;
+	  font-size: 14px;
+	  text-align: left;
 	}	
 	
 /******  Year View Options BEGIN  *******/
