--- a/trunk/templates/default.css
+++ b/trunk/templates/default.css
@@ -30,7 +30,7 @@
 		background-color: #E8E8E8;
 		border:1px solid #CCCCCC;
 		padding:0px;
-		text-align: center;
+		text-align: left;
 		border-spacing: 0px;
 		font-size:11px;
 	}
