final testing/changes for ical

--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -19,7 +19,7 @@
 		Email: kenyu73@gmail.com
 		
 -->
-<form type="multipart/form-data" method="post"> <!-- enctype enables uploads -->
+<form name='cal_frm' enctype="multipart/form-data" method="post"> <!-- enctype enables uploads -->
 <table class="calendar">
   <!-- Header Start -->
   <tr>
