--- a/trunk/templates/default.css
+++ b/trunk/templates/default.css
@@ -28,7 +28,7 @@
 	/* defines the text for multi-day events */
 	.repeatEvent{
 		background-color:;
-		font-weight:bold;
+		font-weight:;
 		padding:1px;
 		text-align: left;
 		border-spacing: 1px;
