added internationalization support for French and Spanish

--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -31,15 +31,13 @@
   <!-- Header End -->
   <!-- Day Heading Start -->
   <tr>
-    <td class="calendarHeading">Sunday</td>
-    <td class="calendarHeading">Monday</td>
-    <td class="calendarHeading">Tuesday</td>
-    <td class="calendarHeading">Wednesday</td>
-    <td class="calendarHeading">Thursday</td>
-    <td class="calendarHeading">Friday</td>
-    <td class="calendarHeading">Saturday</td>
-	
-	<!--<td style="text-align:center; vertical-align:top;" rowspan=6>[[MiniCalendarLast]]<br/>[[MiniCalendarNext]]</td>-->
+    <td class="calendarHeading">[[Sunday]]</td>
+    <td class="calendarHeading">[[Monday]]</td>
+    <td class="calendarHeading">[[Tuesday]]</td>
+    <td class="calendarHeading">[[Wednesday]]</td>
+    <td class="calendarHeading">[[Thursday]]</td>
+    <td class="calendarHeading">[[Friday]]</td>
+    <td class="calendarHeading">[[Saturday]]</td>
   </tr>
   <!-- Day Heading End -->
   <!-- Week Start -->
