--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -23,10 +23,10 @@
 <form name='cal_frm' enctype="multipart/form-data" method="post"> <!-- enctype enables uploads -->
 <table class="calendar">
 <tr>
-	<td class="calendarMonthSelect" colspan="3">[[PreviousMonthButton]]&nbsp;[[MonthSelect]]&nbsp;[[NextMonthButton]]&nbsp;</td>
-	<td class="calendarTitle" nowrap>[[CalendarName]]<br/>
+	<td class="calendarMonthSelect" colspan="2">[[PreviousMonthButton]]&nbsp;[[MonthSelect]]&nbsp;[[NextMonthButton]]&nbsp;</td>
+	<td class="calendarTitle" nowrap colspan="3">[[CalendarName]]<br/>
 	  <font size="-1">[[CalendarMonth]], [[CalendarYear]]</font> </td>
-	<td class="calendarYearSelect" colspan="3">[[YearView]][[MonthView]][[DayView]]&nbsp;&nbsp;&nbsp;&nbsp;[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]]&nbsp;</td>
+	<td class="calendarYearSelect" colspan="2">[[Views]]&nbsp;&nbsp;&nbsp;[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]]&nbsp;</td>
 </tr>
 <!-- Header End -->
   
